--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Elas Na Tech</title>
+    <title>Curriculum</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
-    <body>
+    <div class="container">
         <h1>Marcia Pinto Barcelo</h1>
         <hr>
-        <img src="./imagens/foto.jpg" alt="Foto do curriculo" width="300px" height="400px">
+        <img src="./imagens/foto.jpg" alt="Foto do currículo" class="img" width="300px" height="400px">
         <div>
             <h2>Sobre</h2>
             <hr>
             <p>Sou tecnóloga em logística estudando para me tornar uma programadora web, buscando expandir minhas
-                habilidades e
-                conhecimentos para além do campo da logística. Com os conhecimentos em programação web, espero estar
-                adquirindo
-                uma nova competência que possa ser aplicada na criação e manutenção de sites, desenvolvimento de
-                aplicativos web e
-                outras soluções tecnológicas relacionadas.</p>
+                habilidades e conhecimentos para além do campo da logística. Com os conhecimentos em programação web,
+                espero adquirir uma nova competência que possa ser aplicada na criação e manutenção de sites,
+                desenvolvimento de aplicativos web e outras soluções tecnológicas relacionadas.</p>
+        </div>
+
+        <div>
             <h2>Dados Pessoais</h2>
             <p><strong>Nome:</strong> Marcia P. Barcelo</p>
             <p><strong>Email:</strong> marcia-333@hotmail.com</p>
@@ -31,44 +31,44 @@
 
         <div>
             <h2>Formação Acadêmica</h2>
-            <p><strong>Universidade Federal do Tocantins - UFT</strong> - Tecnologa em Logística</p>
+            <p><strong>Universidade Federal do Tocantins - UFT</strong> - Tecnóloga em Logística</p>
             <p>Período: 2019-2021</p>
-        </div>
-        <div>
-            <h2>Formação Acadêmica</h2>
+
             <p><strong>Universidade Federal do Tocantins - UFT</strong> - Licenciatura em Computação</p>
             <p>Período: 2023-2026</p>
         </div>
+
+
+
         <div>
-            <h2>Formação Tecnica</h2>
-            <p><strong>Centro de Educação Digital - SENAI/SC</strong> -Programação Básica em Front-End</p>
+            <h2>Formação Técnica</h2>
+            <p><strong>Centro de Educação Digital - SENAI/SC</strong> - Programação Básica em Front-End</p>
             <p>Período: 06/04/2023 - 07/05/2023</p>
         </div>
+
         <div>
-            <h2>Formação Inicial e continuada - FIC</h2>
-            <p><strong>Intituto Federal do Tocantins - IFTO</strong> -Programador Web</p>
+            <h2>Formação Inicial e Continuada - FIC</h2>
+            <p><strong>Instituto Federal do Tocantins - IFTO</strong> - Programador Web</p>
             <p>Período: 2023/2023</p>
-        </div>
-        <div>
-            <h2>Formação Inicial e continuada - FIC</h2>
-            <p><strong>Intituto Federal do Tocantins - IFTO</strong> -Programador Web</p>
-            <p>Período: 2023/2023</p>
-        </div>
-        <div>
-            <h2>Formação Inicial e continuada - FIC</h2>
-            <p><strong>Elas Na Tech</strong> -Programadora Web</p>
+
+            <p><strong>Elas Na Tech</strong> - Programadora Web</p>
             <p>Período: 2023/2023</p>
         </div>
 
         <div>
             <h2>Experiência Profissional</h2>
-            <p><strong>Programação Básica em Front-End</strong> - Empresa ABC</p>
-            <p>Período: 06/04/2023 - 07/05/2023</p>
+            <p><strong>Diretora de Marketing</strong> - Liga Acadêmica de Logística - LALOG</p>
+            <p>Período: 2019/2021</p>
             <ul>
-                <li>Desenvolvimento e manutenção de aplicativos web</li>
-                <li>Análise e resolução de problemas de software</li>
-                <li>Colaboração com equipes de desenvolvimento</li>
-                <li>Cria e modifica interfaces</li>
+                <li>Gestão de campanhas de marketing</li>
+                <li>Gerenciamento de estratégias de marketing digital</li>
+                <li>Análise de mercado e pesquisa de público-alvo</li>
+                <li>Desenvolvimento de material promocional e publicitário</li>
+                <li>Gestão de redes sociais e conteúdo online</li>
+                <li>Organização de eventos e workshops</li>
+                <li>Relacionamento com fornecedores e parceiros</li>
+                <li>Habilidades de comunicação e negociação</li>
+                <li>Capacidade analítica e de tomada de decisão</li>
             </ul>
         </div>
 
@@ -77,15 +77,17 @@
             <ul>
                 <li>Planejamento</li>
                 <li>Visão Estratégica</li>
+                <li>Capacidade de Adaptação</li>
+                <li>Tecnologia</li>
+                <li>Flexibilidade</li>
+                <li>Relacionamento</li>
                 <li>HTML5</li>
                 <li>CSS3</li>
                 <li>JavaScript</li>
                 <li>Python</li>
             </ul>
         </div>
-    </body>
-
-</html>
+    </div>
 </body>
 
 </html>
