--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
             <p>Período: 2023-2026</p>
         </div>
 
-
-
         <div>
             <h2>Formação Técnica</h2>
             <p><strong>Centro de Educação Digital - SENAI/SC</strong> - Programação Básica em Front-End</p>
             <p>Período: 06/04/2023 - 07/05/2023</p>
+
+            <p><strong>Centro de Educação e Tecnologia de Araguaína - SENAI/TO</strong> - Assistente Administrativo</p>
+            <p>Período: 2019/2019</p>
         </div>
 
         <div>
