--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <p><strong>Nome:</strong> Marcia P. Barcelo</p>
             <p><strong>Email:</strong> marcia-333@hotmail.com</p>
             <p><strong>Telefone:</strong> (633) 992117499</p>
+            <p><strong>Endereço:</strong> Araguaína - TO</p>
         </div>
 
         <div>
